--- a/app/src/main/res/layout/activity_change_protect.xml
+++ b/app/src/main/res/layout/activity_change_protect.xml
@@ -75,7 +75,7 @@
             app:kswBackDrawable="@drawable/ios_back_drawable"
             app:kswTextOff="Off"
             app:kswTextOn="On"
-            app:kswTintColor="@color/text_lv" />
+            app:kswTintColor="@color/white" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -111,7 +111,7 @@
             android:checked="true"
             app:kswTextOff="Off"
             app:kswTextOn="On"
-            app:kswTintColor="@color/text_lv"
+            app:kswTintColor="@color/white"
             app:kswBackDrawable="@drawable/ios_back_drawable"
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"/>
