--- a/app/src/main/res/layout/activity_face_collect.xml
+++ b/app/src/main/res/layout/activity_face_collect.xml
@@ -12,9 +12,14 @@
     <RelativeLayout
         style="@style/Title"
         android:background="@color/white">
-        <include
+        <ImageView
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@mipmap/zuo_hei"
+            android:layout_centerVertical="true"
+            android:scaleType="fitCenter"
+            android:layout_marginLeft="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
