--- a/app/src/main/res/drawable/ios_back_drawable.xml
+++ b/app/src/main/res/drawable/ios_back_drawable.xml
@@ -23,7 +23,7 @@
 	</item>
 	<item>
 		<shape>
-			<solid android:color="#FEFEFE"/>
+			<solid android:color="#e4e4e4"/>
 			<corners android:radius="99dp"/>
 			<stroke
 				android:width="1.5dp"
