--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:background="@color/bg1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.duan.duan.DCZ_activity.SettingActivity">
@@ -24,9 +25,202 @@
             android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:text="添加账号"
+            android:textColor="@color/text_title"
+            android:textSize="15sp" />
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/xian"
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1.5">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="@dimen/left">
+            <ImageView
+                android:id="@+id/iv1"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/shoushi"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv1"
+                android:layout_marginLeft="10dp"
+                android:textSize="@dimen/text01"
+                android:textColor="@color/text05"
+                android:text="手势密码"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:gravity="center_vertical"
+                android:layout_centerVertical="true">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="未开启"/>
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@mipmap/you"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingBottom="10dp"
+            android:paddingLeft="@dimen/left"
+            android:paddingTop="10dp">
+
+            <ImageView
+                android:id="@+id/iv2"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/zhiwen" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/iv2"
+                android:text="指纹密码"
+                android:textColor="@color/text05"
+                android:textSize="@dimen/text01" />
+
+            <com.example.duan.duan.DCZ_selft.SwitchButton
+                android:id="@+id/button2"
+                style="@style/SwitchButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:checked="true"
+                android:textColor="@color/custom_text_state_color"
+                android:textSize="16dp"
+                app:kswBackDrawable="@drawable/ios_back_drawable"
+                app:kswTextOff="Off"
+                app:kswTextOn="On"
+                app:kswTintColor="@color/white" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="@dimen/left">
+            <ImageView
+                android:id="@+id/iv3"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/renlian"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv3"
+                android:layout_marginLeft="10dp"
+                android:textSize="@dimen/text01"
+                android:textColor="@color/text05"
+                android:text="人脸密码"/>
+            <com.example.duan.duan.DCZ_selft.SwitchButton
+                android:id="@+id/button3"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                style="@style/SwitchButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                app:kswTextOff="Off"
+                app:kswTextOn="On"
+                app:kswTintColor="@color/white"
+                app:kswBackDrawable="@drawable/ios_back_drawable"
+                android:textColor="@color/custom_text_state_color"
+                android:textSize="16dp"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="@dimen/left">
+            <ImageView
+                android:id="@+id/iv4"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/guanyu"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv4"
+                android:layout_marginLeft="10dp"
+                android:textSize="@dimen/text01"
+                android:textColor="@color/text05"
+                android:text="关于"/>
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/you"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="@dimen/left">
+            <ImageView
+                android:id="@+id/iv5"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/tuichu"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv5"
+                android:layout_marginLeft="10dp"
+                android:textSize="@dimen/text01"
+                android:textColor="@color/text05"
+                android:text="退出当前账户"/>
+        </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
