--- a/app/src/main/res/layout/activity_wallet_protect.xml
+++ b/app/src/main/res/layout/activity_wallet_protect.xml
@@ -69,47 +69,51 @@
             android:checked="true"
             app:kswTextOff="Off"
             app:kswTextOn="On"
-            app:kswTintColor="@color/text_lv"
+            app:kswTintColor="@color/white"
             app:kswBackDrawable="@drawable/ios_back_drawable"
             android:textColor="@color/custom_text_state_color"
             android:textSize="16dp"/>
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:background="@color/white"
-        android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="@dimen/left">
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp">
+
         <ImageView
             android:id="@+id/iv2"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:src="@mipmap/t0r"/>
+            android:src="@mipmap/t0r" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/iv2"
             android:layout_marginLeft="10dp"
-            android:textSize="@dimen/text01"
+            android:layout_toRightOf="@id/iv2"
+            android:text="钱包支付"
             android:textColor="@color/text05"
-            android:text="钱包支付"/>
+            android:textSize="@dimen/text01" />
+
         <com.example.duan.duan.DCZ_selft.SwitchButton
             android:id="@+id/button2"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             style="@style/SwitchButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:checked="true"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
             app:kswTextOff="Off"
             app:kswTextOn="On"
-            app:kswTintColor="@color/text_lv"
-            app:kswBackDrawable="@drawable/ios_back_drawable"
-            android:textColor="@color/custom_text_state_color"
-            android:textSize="16dp"/>
+            app:kswTintColor="@color/white" />
     </RelativeLayout>
 </LinearLayout>
