--- a/app/src/main/res/layout/activity_equipment_manage.xml
+++ b/app/src/main/res/layout/activity_equipment_manage.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg1"
     tools:context="com.example.duan.duan.DCZ_activity.EquipmentManageActivity">
     <TextView
         android:layout_width="match_parent"
