--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -134,7 +134,7 @@
 
                 <com.example.duan.duan.DCZ_selft.CBProgressBar
                     android:layout_width="match_parent"
-                    android:layout_height="5dp"
+                    android:layout_height="3dp"
                     android:layout_gravity="center_horizontal"
                     cb:isHorizonStroke="true"
                     cb:orientation="horizontal"
@@ -157,7 +157,7 @@
                 <ImageView
                     android:id="@+id/imageView6"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_height="35dp"
                     android:src="@mipmap/saoma" />
 
                 <TextView
@@ -178,13 +178,14 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/bg2"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
+                android:text="账户保护"
                 android:textColor="@color/text06"
-                android:textSize="@dimen/text01"
-                android:padding="10dp"
-                android:text="账户保护" />
+                android:textSize="@dimen/text01" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -297,9 +298,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/bg2"
                 android:textSize="@dimen/text01"
-                android:padding="10dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
                 android:text="账户管理" />
 
             <LinearLayout
@@ -412,9 +413,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/bg2"
                 android:textSize="@dimen/text01"
-                android:padding="10dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
                 android:text="账户历史" />
 
             <LinearLayout
