--- a/app/src/main/res/layout/activity_setting_password.xml
+++ b/app/src/main/res/layout/activity_setting_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg1"
     tools:context="com.example.duan.duan.DCZ_activity.SettingPasswordActivity">
     <TextView
         android:layout_width="match_parent"
@@ -28,4 +29,53 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:paddingLeft="@dimen/left"
+        android:paddingRight="20dp"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="170dp"
+            android:layout_marginTop="30dp"
+            android:background="@mipmap/sao1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/text05"
+            android:text="账户密码安全等级较高"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/text05"
+            android:text="请继续保持，并定期更新密码"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="修改登录密码"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaolan2"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="修改支付密码"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaolan2"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 </LinearLayout>
