--- a/app/src/main/res/layout/activity_setting_password.xml
+++ b/app/src/main/res/layout/activity_setting_password.xml
@@ -56,6 +56,7 @@
             android:textColor="@color/text05"
             android:text="请继续保持，并定期更新密码"/>
         <TextView
+            android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="修改登录密码"
@@ -67,6 +68,7 @@
             android:textSize="@dimen/title"
             android:textColor="@color/white"/>
         <TextView
+            android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="修改支付密码"
