--- a/app/src/main/res/layout/activity_change_login_password.xml
+++ b/app/src/main/res/layout/activity_change_login_password.xml
@@ -41,12 +41,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_marginTop="15dp">
+
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:id="@+id/imageView8"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/yanzhengma" />
+
                 <EditText
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -78,10 +82,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/mima"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -105,10 +109,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/mima"/>
 
                 <EditText
                     android:id="@+id/editText"
@@ -129,18 +133,34 @@
                 android:layout_height="@dimen/xian"
                 android:background="@color/xian1"
                 android:layout_marginTop="15dp"/>
-            <TextView
-                android:id="@+id/button"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="下一步"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/yuanjiaolan"
-                android:gravity="center"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textSize="@dimen/title"
-                android:textColor="@color/white"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/button_hui"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaohui"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/text05"/>
+                <TextView
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaolan"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/white"/>
+            </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
