--- a/app/src/main/res/layout/activity_change_password2.xml
+++ b/app/src/main/res/layout/activity_change_password2.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.duan.duan.DCZ_activity.ChangePasswordActivity">
+    tools:context="com.example.duan.duan.DCZ_activity.ChangePassword2Activity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:background="@color/bg_title"/>
+
     <RelativeLayout
         style="@style/Title"
         android:background="@color/bg_title">
+
         <include
             android:id="@+id/back"
             layout="@layout/layout_back" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="找回密码"
-            android:textColor="@color/white"
+            android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/xian"
-            android:background="@color/xian1"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:background="@color/xian1" />
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -41,17 +47,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_marginTop="15dp">
                 <ImageView
                     android:layout_width="23dp"
                     android:layout_height="23dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/zhanghao"/>
+                    android:src="@mipmap/yanzhengma"/>
                 <EditText
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:hint="请输入要重置的密码账户"
+                    android:hint="请输入验证码"
                     android:textSize="@dimen/text01"
                     android:singleLine="true"
                     android:layout_marginLeft="10dp"
@@ -59,6 +66,72 @@
                     android:background="@null"
                     android:textCursorDrawable="@null"
                     android:textColor="@color/text05"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/yuanjiaolan"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text01"
+                    android:padding="10dp"
+                    android:text="获取验证码"/>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_marginTop="15dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/mima"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="请输入新的密码（6-12位）"
+                    android:textSize="@dimen/text01"
+                    android:inputType="number"
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColorHint="@color/text06"
+                    android:background="@null"
+                    android:textCursorDrawable="@null"
+                    android:textColor="@color/text05"/>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_marginTop="15dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/mima"/>
+
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="确认新的密码（6-12位）"
+                    android:singleLine="true"
+                    android:textColor="@color/text05"
+                    android:textColorHint="@color/text06"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/text01" />
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
@@ -72,7 +145,7 @@
                     android:id="@+id/button_hui"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="下一步"
+                    android:text="完成"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/yuanjiaohui"
                     android:gravity="center"
@@ -84,7 +157,7 @@
                     android:id="@+id/button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="下一步"
+                    android:text="完成"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/yuanjiaolan"
                     android:gravity="center"
