--- a/app/src/main/res/layout/activity_change_pay_password.xml
+++ b/app/src/main/res/layout/activity_change_pay_password.xml
@@ -29,4 +29,136 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/left"
+            android:layout_marginRight="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/yanzhengma"/>
+                <EditText
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:hint="请输入验证码"
+                    android:textSize="@dimen/text01"
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColorHint="@color/text06"
+                    android:background="@null"
+                    android:textCursorDrawable="@null"
+                    android:textColor="@color/text05"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/yuanjiaolan"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text01"
+                    android:padding="10dp"
+                    android:text="获取验证码"/>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_marginTop="15dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/mima"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="请输入新的密码（6-12位）"
+                    android:textSize="@dimen/text01"
+                    android:inputType="number"
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColorHint="@color/text06"
+                    android:background="@null"
+                    android:textCursorDrawable="@null"
+                    android:textColor="@color/text05"/>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_marginTop="15dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/mima"/>
+
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="确认新的密码（6-12位）"
+                    android:singleLine="true"
+                    android:textColor="@color/text05"
+                    android:textColorHint="@color/text06"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/text01" />
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_marginTop="15dp"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/button_hui"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaohui"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/text05"/>
+                <TextView
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaolan"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/white"/>
+            </RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
