--- a/app/src/main/res/layout/activity_change_phone1.xml
+++ b/app/src/main/res/layout/activity_change_phone1.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg1"
     tools:context="com.example.duan.duan.DCZ_activity.ChangePhone1Activity">
     <TextView
         android:layout_width="match_parent"
@@ -27,5 +28,84 @@
             android:layout_height="@dimen/xian"
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="20dp"
+        android:text="请验证原绑定手机号：********8723"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:background="@color/white"
+        android:layout_marginTop="15dp">
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/yanzhengma" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:hint="请输入验证码"
+            android:textSize="@dimen/text01"
+            android:singleLine="true"
+            android:layout_marginLeft="10dp"
+            android:textColorHint="@color/text06"
+            android:background="@null"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/text05"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="2dp"
+            android:background="@drawable/yuanjiaolan"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text01"
+            android:padding="10dp"
+            android:text="获取验证码"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/left"
+        android:paddingRight="@dimen/right">
+        <TextView
+            android:id="@+id/button_hui"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="下一步"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaohui"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/text05"/>
+        <TextView
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="下一步"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaolan"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/white"/>
     </RelativeLayout>
 </LinearLayout>
