--- a/app/src/main/res/layout/activity_change_phone2.xml
+++ b/app/src/main/res/layout/activity_change_phone2.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg1"
     tools:context="com.example.duan.duan.DCZ_activity.ChangePhone2Activity">
     <TextView
         android:layout_width="match_parent"
@@ -27,5 +28,117 @@
             android:layout_height="@dimen/xian"
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="20dp"
+        android:text="请绑定新手机" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="+86" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent"
+            android:background="@color/bg1"></View>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入验证码"
+            android:singleLine="true"
+            android:textColor="@color/text05"
+            android:textColorHint="@color/text06"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/text01" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:layout_marginTop="15dp">
+            <ImageView
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/yanzhengma"/>
+            <EditText
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:hint="请输入验证码"
+                android:textSize="@dimen/text01"
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:textColorHint="@color/text06"
+                android:background="@null"
+                android:textCursorDrawable="@null"
+                android:textColor="@color/text05"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="2dp"
+                android:background="@drawable/yuanjiaolan"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text01"
+                android:padding="10dp"
+                android:text="获取验证码"/>
+        </LinearLayout>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/left"
+        android:paddingRight="20dp">
+        <TextView
+            android:id="@+id/button_hui"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="确定"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaohui"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/text05"/>
+        <TextView
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="确定"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaolan"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/white"/>
     </RelativeLayout>
 </LinearLayout>
