--- a/app/src/main/res/layout/activity_change_phone3.xml
+++ b/app/src/main/res/layout/activity_change_phone3.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg1"
     tools:context="com.example.duan.duan.DCZ_activity.ChangePhone3Activity">
     <TextView
         android:layout_width="match_parent"
@@ -27,5 +28,80 @@
             android:layout_height="@dimen/xian"
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:textColor="@color/text05"
+        android:textSize="@dimen/text01"
+        android:text="如果原密保手机已换号或不能接收到短信验证码，需提供一个能收验证码的新手机号和个人实名有效资料提交工作人员审核通过后才能更换新密保手机"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="+86" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent"
+            android:background="@color/bg1"></View>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入验证码"
+            android:singleLine="true"
+            android:textColor="@color/text05"
+            android:textColorHint="@color/text06"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/text01" />
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+        <TextView
+            android:id="@+id/button_hui"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="下一步"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaohui"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/text05"/>
+        <TextView
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="确定"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaolan"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/white"/>
     </RelativeLayout>
 </LinearLayout>
