--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.duan.duan.DCZ_activity.ChangePhoneActivity">
+    tools:context="com.example.duan.duan.DCZ_activity.LockActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
@@ -19,8 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="密保手机"
-            android:textColor="@color/text_title"
+            android:text="手势启动密码"
+            android:textColor="@color/white"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -28,64 +29,50 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/left"
-        android:paddingRight="20dp">
-
+        android:orientation="vertical">
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="170dp"
-            android:layout_marginTop="30dp"
-            android:background="@mipmap/sao1" />
-
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/t2r"/>
         <TextView
+            android:id="@+id/type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="当前绑定的密保手机：132****8723"
-            android:textColor="@color/text05"
-            android:textSize="17sp" />
-
+            android:text="手势启动密码已设置"/>
         <TextView
-            android:id="@+id/button"
+            android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginLeft="@dimen/left"
+            android:layout_marginRight="20dp"
+            android:text="更改手势启动密码"
+            android:layout_marginTop="25dp"
             android:background="@drawable/yuanjiaolan2"
             android:gravity="center"
-            android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:text="更换"
-            android:textColor="@color/white"
-            android:textSize="@dimen/title" />
-
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/white"/>
         <TextView
+            android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:layout_marginLeft="@dimen/left"
+            android:layout_marginRight="20dp"
+            android:text="删除手势启动密码"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/yuanjiaolan2"
+            android:gravity="center"
             android:paddingTop="10dp"
-            android:text="如果当前手机已换号，请及时更换"
-            android:textColor="@color/text06"
-            android:textSize="@dimen/text01" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"></View>
-
-        <TextView
-            android:id="@+id/change"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:padding="10dp"
-            android:text="已换号"
-            android:textColor="@color/text07"
-            android:textSize="17sp" />
+            android:paddingBottom="10dp"
+            android:textSize="@dimen/title"
+            android:textColor="@color/white"/>
     </LinearLayout>
+
 </LinearLayout>
