--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,9 +33,11 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <TextView
+            android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="40dp"
+            android:padding="20dp"
+            android:layout_marginBottom="20dp"
             android:text="找回密码"
             android:textColor="@color/text07"
             android:textSize="@dimen/text02"
@@ -52,10 +54,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/zhanghao"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -77,11 +79,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:id="@+id/imageView10"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/mima" />
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -100,18 +105,34 @@
                 android:layout_height="@dimen/xian"
                 android:background="@color/xian1"
                 android:layout_marginTop="15dp"/>
-            <TextView
-                android:id="@+id/button"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="下一步"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/yuanjiaolan"
-                android:gravity="center"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textSize="@dimen/title"
-                android:textColor="@color/white"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/button_hui"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaohui"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/text05"/>
+                <TextView
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaolan"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/white"/>
+            </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
