--- a/app/src/main/res/layout/activity_phone_prove.xml
+++ b/app/src/main/res/layout/activity_phone_prove.xml
@@ -42,12 +42,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_marginTop="15dp">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/weizhi"/>
                 <EditText
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -77,12 +78,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_marginTop="15dp">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/zhanghao"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -119,12 +121,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_marginTop="15dp">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/yanzhengma"/>
 
                 <EditText
                     android:id="@+id/editText"
@@ -154,18 +157,34 @@
                 android:layout_height="@dimen/xian"
                 android:background="@color/xian1"
                 android:layout_marginTop="15dp"/>
-            <TextView
-                android:id="@+id/button"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="下一步"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/yuanjiaolan"
-                android:gravity="center"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textSize="@dimen/title"
-                android:textColor="@color/white"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/button_hui"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaohui"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/text05"/>
+                <TextView
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="下一步"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/yuanjiaolan"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="@dimen/title"
+                    android:textColor="@color/white"/>
+            </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
