--- a/app/src/main/res/layout/activity_security_protect.xml
+++ b/app/src/main/res/layout/activity_security_protect.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg1"
     tools:context="com.example.duan.duan.DCZ_activity.SecurityProtectActivity">
     <TextView
         android:layout_width="match_parent"
@@ -27,5 +29,230 @@
             android:layout_height="@dimen/xian"
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text02"
+            android:textColor="@color/text05"
+            android:text="已开启3类业务账户授权保护"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text02"
+            android:textColor="@color/text06"
+            android:layout_marginTop="5dp"
+            android:text="未开启保护，系统将默认禁止对该系统的授权"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:id="@+id/iv1"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/iv1"
+            android:text="钱包"
+            android:textColor="@color/text05"
+            android:textSize="@dimen/text01" />
+
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button1"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/white" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:background="@color/white"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:id="@+id/iv2"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/iv2"
+            android:text="撮合交易平台"
+            android:textColor="@color/text05"
+            android:textSize="@dimen/text01" />
+
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button2"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/white" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="1dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:id="@+id/iv3"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/iv3"
+            android:text="王者荣耀"
+            android:textColor="@color/text05"
+            android:textSize="@dimen/text01" />
+
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button3"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/white" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="1dp"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:id="@+id/iv4"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/iv4"
+            android:text="淘宝商城"
+            android:textColor="@color/text05"
+            android:textSize="@dimen/text01" />
+
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button4"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/white" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="1dp"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:id="@+id/iv5"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/iv5"
+            android:text="竞技运动场"
+            android:textColor="@color/text05"
+            android:textSize="@dimen/text01" />
+
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button5"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/white" />
     </RelativeLayout>
 </LinearLayout>
