--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -72,12 +72,16 @@
                 android:textColor="@color/text05"
                 android:text="手势密码"/>
             <LinearLayout
+                android:id="@+id/lock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical"
                 android:layout_centerVertical="true">
                 <TextView
+                    android:id="@+id/tv_suo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="未开启"/>
